--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "myso-gas-station"
 version = "0.0.1"
 edition = "2021"
-authors = ["The Social Proof Foundation <brandon@socialproof.foundation.com>"]
+authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
 license = "Apache-2.0"
 repository = "https://github.com/the-social-proof-foundation/myso-core-gas-station"
 
