--- a/kms-sidecar/package.json
+++ b/kms-sidecar/package.json
@@ -1,6 +1,7 @@
 {
   "name": "myso-gcp-kms-sidecar",
   "version": "1.0.0",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -8,18 +9,18 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@google-cloud/kms": "^4.0.0",
-    "@noble/curves": "^1.0.0",
-    "@noble/hashes": "^1.3.0",
-    "@socialproof/myso": "^0.0.1",
-    "asn1-ts": "^1.0.0",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2"
+    "@google-cloud/kms": "^5.4.0",
+    "@noble/curves": "^2.0.1",
+    "@noble/hashes": "^2.0.1",
+    "@socialproof/myso": "^0.0.3",
+    "asn1-ts": "^11.0.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.22",
-    "@types/node": "^20.0.0",
-    "ts-node": "^10.9.0",
-    "typescript": "^5.0.0"
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
